--- a/internal/projects/bulleit/Interfaces/GenericItemDetailViewController.xib
+++ b/internal/projects/bulleit/Interfaces/GenericItemDetailViewController.xib
@@ -52,6 +52,7 @@
 						<string key="NSFrame">{{150, 198}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:948</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -139,12 +140,12 @@
 								<reference key="NSSuperview" ref="582508261"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="18180027"/>
-								<int key="IBUIContentMode">1</int>
+								<int key="IBUIContentMode">4</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<object class="NSCustomResource" key="IBUIImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">cat_icon_other.png</string>
+									<string key="NSResourceName">cat_icon_other_large.png</string>
 								</object>
 							</object>
 							<object class="IBUIView" id="31986916">
@@ -753,7 +754,7 @@
 			<bool key="EncodedWithXMLCoder">YES</bool>
 			<object class="NSArray" key="dict.sortedKeys">
 				<bool key="EncodedWithXMLCoder">YES</bool>
-				<string>cat_icon_other.png</string>
+				<string>cat_icon_other_large.png</string>
 				<string>main_action_button_bg@2x.png</string>
 				<string>shelf_background.png</string>
 			</object>
