Add "About" back in

--- a/sites/stamped.com/bin/www/templates/index.html
+++ b/sites/stamped.com/bin/www/templates/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <p class="thanks replaced">Whoa. Thanks!</p>
                 <div class="more">
-                    <span>&copy;2011 Stamped Inc.</span> {% comment %}<a href="about">About Us</a>{% endcomment %}
+                    <span>&copy;2011 Stamped Inc.</span> <a href="about">About Us</a>
                 </div> 
             </div> <!-- /iphone -->
         </div> <!-- /home -->
